--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <header class="header">
         <div class="header-container">
             <h1 class="nav-bar-brand">BrandName</h1>
+            <ul class="nav-bar-left">
+                <li class="nav-bar-items"><a class="nav-bar-link" href="#">Home</a></li>
+                <li class="nav-bar-items"><a class="nav-bar-link" href="#">Product</a></li>
+                <li class="nav-bar-items"><a class="nav-bar-link" href="#">Pricing</a></li>
+                <li class="nav-bar-items"><a class="nav-bar-link" href="#">Contact</a></li>
+            </ul>
+            <div class="nav-bar-right">
+                <a href="#" class="login">Login</a>
+                <button class="member"><span class="member-text">Become a member</span><span class="member-arrow">&#8594;</span></button>
+            </div>
         </div>
     </header>
 </body>
