Added lower header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="header-container">
+        <div class="header-nav-bar">
             <h1 class="nav-bar-brand">BrandName</h1>
             <ul class="nav-bar-left">
                 <li class="nav-bar-items"><a class="nav-bar-link" href="#">Home</a></li>
@@ -19,6 +19,37 @@
             <div class="nav-bar-right">
                 <a href="#" class="login">Login</a>
                 <button class="member"><span class="member-text">Become a member</span><span class="member-arrow">&#8594;</span></button>
+            </div>
+        </div>
+        <div class="header-center">
+            <h1 class="center-headline">We Ensure A Best Insurance Service</p>
+                <h2 class="header-center-text">We know how large objects will act, but things on a small scale do not act that way</h2>
+                <div class="header-center-buttons">
+                    <button class="header-center-button-left">Get Quote Now</button>
+                    <button class="header-center-button-right">Learn More</button>
+                </div>
+        </div>
+        <div class="header-lower">
+            <div class="header-lower-items">
+                <img href="#" class="header-lower-items-image" alt="header-lower-items-image">
+                <h3 class="header-lower-h3">Peace of Mind</h3>
+                <p class="header-lower-p">
+                    the quick brown fox jumps over the lazy dog
+                </p>
+            </div>
+            <div class="header-lower-items">
+                <img href="#" class="header-lower-items-image" alt="header-lower-items-image">
+                <h3 class="header-lower-h3">Set For Life</h3>
+                <p class="header-lower-p">
+                    the quick brown fox jumps over the lazy dog
+                </p>
+            </div>
+            <div class="header-lower-items">
+                <img href="#" class="header-lower-items-image" alt="header-lower-items-image">
+                <h3 class="header-lower-h3">100% Satisfaction</h3>
+                <p class="header-lower-p">
+                    the quick brown fox jumps over the lazy dog
+                </p>
             </div>
         </div>
     </header>
