--- a/index.html
+++ b/index.html
@@ -465,5 +465,70 @@
         </div>
     </section>
     <!-- pricing -->
+    <!-- contact -->
+    <section class="contact">
+        <div class="contact-container">
+            <!-- contact-upper -->
+            <div class="contact-upper">
+                <!-- contact-upper-left -->
+                <div class="contact-upper-left">
+                    <h2 class="contact-upper-left-h2">
+                        We have branched all over the world
+                    </h2>
+                    <p class="contact-upper-left-p2">
+                        The gradual accumulation of information about atomic and 
+small-scale behaviour during the first quarter of the 20th 
+century, which gave some indications about how small things 
+do behave, produced an increasing confusion which was 
+Heisenberg, and Born.
+                    </p>
+                </div>
+                <!-- contact-upper-left -->
+                <!-- contact-upper-right -->
+                <div class="contact-upper-right">
+                    <img src="./images/contact-upper-right-image.png" alt="contact-upper-right" class="contact-upper-right-image">
+                </div>
+                <!-- contact-upper-right -->
+            </div>
+            <!-- contact-upper -->
+            <!-- contact-lower -->
+            <div class="contact-lower">
+                <div class="contact-lower-container">
+                        <!-- contact-lower-left -->
+                    <div class="contact-lower-left">
+                        <img src="./images/contact-lower-left-image.jpg" alt="contact-lower-left" class="contact-lower-right-left">
+                    </div>
+                    <!-- contact-lower-left -->
+                    <!-- contact-lower-right -->
+                    <div class="contact-lower-right">
+                        <div class="contact-lower-right-container">
+                            <!-- contact-form-header -->
+                            <div class="contact-form-header">
+                                <h3 class="contact-form-h3">Book Appointment</h3>
+                            </div>
+                            <!-- contact-form-header -->
+                            <!-- contact-form -->
+                            <div class="contact-form">
+                                <p class="contact-form-tag">Name*</p>
+                                <input type="text" class="contact-text" placeholder="Full Name*">
+                                <p class="contact-form-tag">Name*</p>
+                                <input type="text" class="contact-text" placeholder="Full Name*">
+                                <p class="contact-form-tag">Name*</p>
+                                <input type="text" class="contact-text" placeholder="Full Name*">
+                                <p class="contact-form-tag">Name*</p>
+                                <input type="text" class="contact-text" placeholder="Full Name*">
+                                <input type="button" value="Book Appointment" class="contact-button">
+                            </div>
+                            <!-- contact-form -->
+                        </div>
+                    </div>
+                    <!-- contact-lower-right -->
+                </div>
+            </div>
+             <!-- contact-lower -->
+        </div>
+    </section>
+    <!-- contact -->
+
 </body>
 </html>
