--- a/index.html
+++ b/index.html
@@ -529,6 +529,110 @@ Heisenberg, and Born.
         </div>
     </section>
     <!-- contact -->
+    <!-- footer -->
+    <footer class="footer">
+        <!-- footer-upper -->
+        <div class="footer-upper">
+            <div class="footer-upper-container">
+                <!-- footer-upper-left -->
+                <div class="footer-upper-left">
+                    <h2 class="footer-upper-h2"> Consulting Agency For your Business</h2>
+                    <p class="footer-upper-p">
+                        the quick brown fox jumps over the lazy dog
+                    </p>
+                </div>
+                <!-- footer-upper-left -->
+                <!-- footer-upper-right -->
+                <div class="footer-upper-right">
+                    <input type="button" value="Contact Us" class="footer-upper-button">
+                </div>
+                <!-- footer-upper-right -->
+            </div>
+
+        </div>
+        <!-- footer-upper -->
+        <!-- footer-middle -->
+        <div class="footer-middle">
+            <div class="footer-middle-container">
+                <!-- footer-middle-col -->
+                <div class="footer-middle-col">
+                    <h5 class="footer-col-header">Company</h5>
+                <ul class="footer-middle-list">
+                    <li class="footer-col-li">About Us</li>
+                    <li class="footer-col-li">Carier</li>
+                    <li class="footer-col-li">We are hiring</li>
+                    <li class="footer-col-li">Blog</li>
+                </ul>
+                </div>
+                 <!-- footer-middle-col -->
+                 <!-- footer-middle-col -->
+                <div class="footer-middle-col">
+                    <h5 class="footer-col-header">Legal</h5>
+                <ul class="footer-middle-list">
+                    <li class="footer-col-li">About Us</li>
+                    <li class="footer-col-li">Carier</li>
+                    <li class="footer-col-li">We are hiring</li>
+                    <li class="footer-col-li">Blog</li>
+                </ul>
+                </div>
+                 <!-- footer-middle-col -->
+                 <!-- footer-middle-col -->
+                <div class="footer-middle-col">
+                    <h5 class="footer-col-header">Features</h5>
+                <ul class="footer-middle-list">
+                    <li class="footer-col-li">Business Marketing</li>
+                    <li class="footer-col-li">User Analytic</li>
+                    <li class="footer-col-li">Live Chat</li>
+                    <li class="footer-col-li">Unlimited Support</li>
+                </ul>
+                </div>
+                 <!-- footer-middle-col -->
+                 <!-- footer-middle-col -->
+                <div class="footer-middle-col">
+                    <h5 class="footer-col-header">Resources</h5>
+                <ul class="footer-middle-list">
+                    <li class="footer-col-li">IOS & Android</li>
+                    <li class="footer-col-li">Watch a Demo</li>
+                    <li class="footer-col-li">Customers</li>
+                    <li class="footer-col-li">API</li>
+                </ul>
+                </div>
+                 <!-- footer-middle-col -->
+                 <!-- footer-middle-col -->
+                <div class="footer-middle-col">
+                    <h5 class="footer-col-header">Get In Touch</h5>
+                <ul class="footer-middle-list">
+                    <li class="footer-col-li"><img src="./images/footer-middle-icon-1.svg" alt="footer-middle-icon-1"><div>(480) 555-0103</div></li>
+                    <li class="footer-col-li"><img src="./images/footer-middle-icon-2.svg" alt="footer-middle-icon-2"><div>4517 Washington Ave.</div></li>
+                    <li class="footer-col-li"><img src="./images/footer-middle-icon-3.svg" alt="footer-middle-icon-3"><div>debra.holt@example.com</div></li>
+                </ul>
+                </div>
+                 <!-- footer-middle-col -->
+                 
+                 
+            </div>
+        </div>
+        <!-- footer-middle -->
+        <!-- footer-lower -->
+        <div class="footer-lower">
+            <div class="footer-lower-container">
+                <!-- footer-lower-left -->
+                <div class="footer-lower-left">
+                    <p class="footer-lower-left-p">
+                        Made With Love By Figmaland All Right Reserved
+                    </p>
+                </div>
+                <!-- footer-lower-left -->
+                <!-- footer-lower-right -->
+                <img src="#" alt="footer-lower-icons" class="footer-lower-icons">
+                <img src="#" alt="footer-lower-icons" class="footer-lower-icons">
+                <img src="#" alt="footer-lower-icons" class="footer-lower-icons">
+                <!-- footer-lower-right -->
+            </div>
+        </div>
+        <!-- footer-lower -->
+    </footer>
+    <!-- footer -->
 
 </body>
 </html>
