--- a/index.html
+++ b/index.html
@@ -624,9 +624,9 @@ Heisenberg, and Born.
                 </div>
                 <!-- footer-lower-left -->
                 <!-- footer-lower-right -->
-                <img src="#" alt="footer-lower-icons" class="footer-lower-icons">
-                <img src="#" alt="footer-lower-icons" class="footer-lower-icons">
-                <img src="#" alt="footer-lower-icons" class="footer-lower-icons">
+                <img src="./images/footer-lower-icon-1.svg" alt="footer-lower-icons" class="footer-lower-icons">
+                <img src="./images/footer-lower-icon-2.svg" alt="footer-lower-icons" class="footer-lower-icons">
+                <img src="./images/footer-lower-icon-3.svg" alt="footer-lower-icons" class="footer-lower-icons">
                 <!-- footer-lower-right -->
             </div>
         </div>
