links css added

--- a/index.html
+++ b/index.html
@@ -76,30 +76,36 @@
     <section class="features">
         <div class="features-container">
             <!-- features-items -->
-        <div class="features-item">
-            <img src="./images/features-image-1.svg" alt="feature item image" class="feature-item-image">
-            <div class="feature-item-caption">
-                <h5 class="features-item-h5">Peace of Mind</h5>
-                <p class="feature-item-p">So it really behaves like neither. Now we have given up.</p>
+            <div class="features-item">
+                <div class="features-image">
+                    <img src="./images/features-image-3.svg" alt="feature item image" class="feature-item-image">
+                <div class="feature-item-caption">
+                    <h5 class="features-item-h5">100% Satisfaction</h5>
+                    <p class="feature-item-p">So it really behaves like neither. Now we have given up.</p>
+                </div>
             </div>
-        </div>
+            </div>
         <!-- features-items -->
         <!-- features-items -->
         <div class="features-item">
-            <img src="./images/features-image-2-1.svg" alt="feature item image" class="feature-item-image">
+            <div class="features-image">
+                <img src="./images/features-image-2.svg" alt="feature item image" class="feature-item-image">
             <div class="feature-item-caption">
                 <h5 class="features-item-h5">Set For Life</h5>
                 <p class="feature-item-p">They were used to create the machines that launched</p>
             </div>
         </div>
+        </div>
         <!-- features-items -->
         <!-- features-items -->
         <div class="features-item">
-            <img src="./images/features-image-3.svg" alt="feature item image" class="feature-item-image">
+            <div class="features-image">
+                <img src="./images/features-image-3.svg" alt="feature item image" class="feature-item-image">
             <div class="feature-item-caption">
                 <h5 class="features-item-h5">100% Satisfaction</h5>
                 <p class="feature-item-p">So it really behaves like neither. Now we have given up.</p>
             </div>
+        </div>
         </div>
         <!-- features-items -->
         </div>
@@ -108,7 +114,7 @@
     <!-- features -->
     <!-- testimonials -->
     <section class="testimonials">
-        <div class="testimonals-container">
+        <div class="testimonials-container">
             <!-- testimonials-header -->
             <div class="testimonials-header">
             <div class="testimonals-header-container">
