--- a/index.html
+++ b/index.html
@@ -242,14 +242,14 @@
             <!-- links-upper -->
              <!-- links-lower -->
              <div class="links-lower">
-                <div class="links-lower container">
+                <div class="links-lower-container">
                     <div class="links-lower-content">
                         <!-- links-lower-left -->
                         <div class="links-lower-left">
                             <h3 class="links-lower-h3">Subscribe For Latest Newsletter<h3></div>
                                 <!-- links-lower-left -->
                                 <!-- links-lower-right -->
-                        <div class="links-lower-right">
+                        <div class="links-lower-right clearfix">
                             <input type="text" placeholder="Your Email" class="links-lower-text">
                             <input type="button" value="Subscribe" class="links-lower-button">
                         </div>
