--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                     <h2 class="contact-upper-left-h2">
                         We have branched all over the world
                     </h2>
-                    <p class="contact-upper-left-p2">
+                    <p class="contact-upper-left-p">
                         The gradual accumulation of information about atomic and 
 small-scale behaviour during the first quarter of the 20th 
 century, which gave some indications about how small things 
