contact-css-completed

--- a/index.html
+++ b/index.html
@@ -508,35 +508,34 @@ Heisenberg, and Born.
             <!-- contact-lower -->
             <div class="contact-lower">
                 <div class="contact-lower-container">
-                        <!-- contact-lower-left -->
-                    <div class="contact-lower-left">
-                        <img src="./images/contact-lower-left-image.jpg" alt="contact-lower-left" class="contact-lower-right-left">
-                    </div>
-                    <!-- contact-lower-left -->
-                    <!-- contact-lower-right -->
-                    <div class="contact-lower-right">
-                        <div class="contact-lower-right-container">
                             <!-- contact-form-header -->
                             <div class="contact-form-header">
-                                <h3 class="contact-form-h3">Book Appointment</h3>
+                                <h3 class="contact-form-h3">Get A Free Quote Here</h3>
                             </div>
                             <!-- contact-form-header -->
                             <!-- contact-form -->
                             <div class="contact-form">
                                 <p class="contact-form-tag">Name*</p>
                                 <input type="text" class="contact-text" placeholder="Full Name*">
-                                <p class="contact-form-tag">Name*</p>
-                                <input type="text" class="contact-text" placeholder="Full Name*">
-                                <p class="contact-form-tag">Name*</p>
-                                <input type="text" class="contact-text" placeholder="Full Name*">
-                                <p class="contact-form-tag">Name*</p>
-                                <input type="text" class="contact-text" placeholder="Full Name*">
+                                <p class="contact-form-tag">Email*</p>
+                                <input type="text" class="contact-text" placeholder="example@gmail.com">
+                                <p class="contact-form-tag">Department*</p>
+                                 <select name="cars" id="cars" class="contact-text">
+                                 <option value="volvo">Please Select:</option>
+                                    <option value="saab">Saab</option>
+                                                <option value="mercedes">Mercedes</option>
+                                                         <option value="audi">Audi</option>
+                                                    </select>
+                                <p class="contact-form-tag">Time*</p>
+                                <select name="cars" id="cars" class="contact-text">
+                                    <option value="volvo">4:00 Available</option>
+                                       <option value="saab">Saab</option>
+                                                   <option value="mercedes">Mercedes</option>
+                                                            <option value="audi">Audi</option>
+                                                       </select>
                                 <input type="button" value="Book Appointment" class="contact-button">
                             </div>
                             <!-- contact-form -->
-                        </div>
-                    </div>
-                    <!-- contact-lower-right -->
                 </div>
             </div>
              <!-- contact-lower -->
