--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/layout-sm.css">
     <link rel="stylesheet" href="./css/style-sm.css">
 </head>
-<body>
+<body class="main">
      <!-- Header -->
     <header class="header">
         <div class="header-container">
