added header bottom

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Mulish:wght@200&family=Source+Sans+3:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/layout-sm.css">
-    <link rel="stylesheet" href="./css/style-sm.css">
+    <link rel="stylesheet" href="./css/layout-xl.css">
+    <link rel="stylesheet" href="./css/style-xl.css">
 </head>
 <body class="main">
      <!-- Header -->
