--- a/index.html
+++ b/index.html
@@ -492,6 +492,9 @@
         <div class="contact-container">
             <!-- contact-upper -->
             <div class="contact-upper">
+                <div class="contact-upper-container">
+                    
+                </div>
                 <!-- contact-upper-left -->
                 <div class="contact-upper-left">
                     <h2 class="contact-upper-left-h2">
