--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <link rel="stylesheet" href="./css/style-sm.css"> -->
     <link rel="stylesheet" media='screen and (max-width: 1000px)' href="./css/style-sm.css"/>
     <link rel="stylesheet" media='screen and (max-width: 1000px)' href="./css/layout-sm.css"/>
-    <link rel="stylesheet" media='screen and (min-width: 1000px) and (max-width:1460)' href="./css/style-l.css"/>
-    <link rel="stylesheet" media='screen and (min-width: 1000px) and (max-width:1460)' href="./css/layout-l.css"/>
-    <link rel="stylesheet" media='screen and (min-width: 1000px)' href="./css/style-xl.css"/>
-    <link rel="stylesheet" media='screen and (min-width: 1000px)' href="./css/layout-xl.css"/>
+    <link rel="stylesheet" media='screen and (min-width: 1000px) and (max-width:1460px)' href="./css/style-l.css"/>
+    <link rel="stylesheet" media='screen and (min-width: 1000px) and (max-width:1460px)' href="./css/layout-l.css"/>
+    <link rel="stylesheet" media='screen and (min-width: 1460px)' href="./css/style-xl.css"/>
+    <link rel="stylesheet" media='screen and (min-width: 1460px)' href="./css/layout-xl.css"/>
 </head>
 <body class="main">
      <!-- Header -->
