--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </ul>
                 </div>
                 <div class="nav-bar-right">
-                    <a href="#" class="login">Login</a>
+                    <div class="login-div"><a href="#" class="login">Login</a></div>
                     <button class="member"><span class="member-text">Become a member</span><span class="member-arrow">&#8594;</span></button>
                 </div>
             </div>
