--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <!-- features-items -->
         <div class="features-item">
             <div class="features-image">
-                <img src="./images/features-image-2.svg" alt="feature item image" class="feature-item-image">
+                <img src="./images/features-image-2.png" alt="feature item image" class="feature-item-image">
             <div class="feature-item-caption">
                 <h5 class="features-item-h5">Set For Life</h5>
                 <p class="feature-item-p">They were used to create the machines that launched</p>
@@ -336,7 +336,7 @@
                                 <!-- offers-item -->
                                 <!-- offers-item -->
                                 <div class="offer-item">
-                                    <div class="offer-tick">
+                                    <div class="offer-tick-lower">
                                         <img src="./images/offer-tick.svg" alt="offer-image" class="offer-image">
                                     </div>
                                 <h6 class="offers-h6">1GB Cloud storage</h6>
@@ -344,7 +344,7 @@
                                 <!-- offers-item -->
                                 <!-- offers-item -->
                                 <div class="offer-item">
-                                    <div class="offer-tick">
+                                    <div class="offer-tick-lower">
                                         <img src="./images/offer-tick.svg" alt="offer-image" class="offer-image">
                                     </div>
                                 <h6 class="offers-h6">Email and community support</h6>
@@ -401,7 +401,7 @@
                                 <!-- offers-item -->
                                 <!-- offers-item -->
                                 <div class="offer-item">
-                                    <div class="offer-tick">
+                                    <div class="offer-tick-lower">
                                         <img src="./images/offer-tick.svg" alt="offer-image" class="offer-image">
                                     </div>
                                 <h6 class="offers-h6">1GB Cloud storage</h6>
@@ -409,7 +409,7 @@
                                 <!-- offers-item -->
                                 <!-- offers-item -->
                                 <div class="offer-item">
-                                    <div class="offer-tick">
+                                    <div class="offer-tick-lower">
                                         <img src="./images/offer-tick.svg" alt="offer-image" class="offer-image">
                                     </div>
                                 <h6 class="offers-h6">Email and community support</h6>
@@ -466,7 +466,7 @@
                                 <!-- offers-item -->
                                 <!-- offers-item -->
                                 <div class="offer-item">
-                                    <div class="offer-tick">
+                                    <div class="offer-tick-lower">
                                         <img src="./images/offer-tick.svg" alt="offer-image" class="offer-image">
                                     </div>
                                 <h6 class="offers-h6">1GB Cloud storage</h6>
@@ -474,7 +474,7 @@
                                 <!-- offers-item -->
                                 <!-- offers-item -->
                                 <div class="offer-item">
-                                    <div class="offer-tick">
+                                    <div class="offer-tick-lower">
                                         <img src="./images/offer-tick.svg" alt="offer-image" class="offer-image">
                                     </div>
                                 <h6 class="offers-h6">Email and community support</h6>
